2005 June 24 Stefan Urbanek

    * STCompiler: Fixed STUndefinedKeyException name as it was fixed in -base
    
2005 June 20 Stefan Urbanek

    * Rewritten parts of STCompiler, STBytecodeInterpreter, STCompiled* and '
    ST*Context: Smalltalk now refers to instance variables by name not by index.
    This should allow creation of STActor class and final implementation of
    instance variables in STScriptObject. Instance variables are accessed
    by their name through Key-Value-Coding protocol.

2005 Mar 9 Stefan Urbanek

    * Patch by Matthew D Swank:  patch that keeps the temp space allocated to a 
    particular block, while avoiding naming conflicts by storing empty 
    strings as placeholders _after_ the block has been compiled (and the 
    names are no longer needed). 

2004 Nov 9 Stefan Urbanek

    * Remove STMethodSignatureForSelector as it was deprecated because of
    inportability to OSX.
    
2004 Nov 2 Stefan Urbanek

    * Changed super of STBytecodes from NSData to NSObject - there were some
    OSX issues

2004 Jul 10 Stefan Urbanek

    * Applied patch from Alexander V. Diemand (fixed bug #9595) - fixed
    maximum number of literals, fixed longjmp

2004 Jun 28 Stefan Urbanek

    * Fixed expresion duplicating.

2004 Jun 27 Stefan Urbanek

    * Version 0.8.1

2004 Jun 20 Stefan Urbanek

    * Added a fix to the compiler from Mateu Batle

2004 May 27 Stefan Urbanek

    * Fixed bug with signed/unsigned bytecode, which made StepTalk to crash if
      has more than 127 literals in the array. (patch by Mateu Batle)

2003 Sep 28 Stefan Urbanek <urbanek@host.sk>

    * NSNumber: fixed -NSNumber to:step:do: - now accepts negative step.
    (Patch by Alexander Diemand)

2003 Sep 24 Stefan Urbanek <urbanek@host.sk>
    
    * Guard compilation with an autorelease pool
    
2003 Sep 23 Stefan Urbanek <urbanek@host.sk>

    * STBytecodeInterpreter: fixed memory leak (reported by Alexander Diemand)

2003 Aug 5 Stefan Urbanek <urbanek@host.sk>
