@@ -30,6 +30,7 @@ Smalltalk_OBJC_FILES = \
         SmalltalkEngine.m \
         NSArray+additions.m \
         NSNumber+additions.m \
+        NSObject+additions.m \
         NSString+additions.m \
         STBlock.m \
         STBlockContext.m \
