@@ -1,3 +1,11 @@
 {
     STFileTypes = ( "st", "stalk" );
+
+    StepTalkLanguages = {
+        Smalltalk = {
+                FileTypes = ("st");
+                EngineClass = "SmalltalkEngine";
+            }
+    }
+
 }
